2013-01-23  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Remove unused header files in chromium/public/platform/
        https://bugs.webkit.org/show_bug.cgi?id=107741

        Reviewed by James Robinson.

        These header files have migrated to the new Platform directory.
        This patch updates the remaining #include references and removes
        the old files that did nothing but redirect to the new ones.

        * DumpRenderTree/chromium/TestRunner/src/MockGrammarCheck.cpp:
        * DumpRenderTree/chromium/TestRunner/src/MockSpellCheck.h:

2013-01-23  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Bump webkitgtk-test-fonts dependency to cover fallbacks for Tamil, Bengali, and others
        https://bugs.webkit.org/show_bug.cgi?id=107727

        Reviewed by Gustavo Noronha Silva.

        * gtk/jhbuild.modules: Update the JHBuild moduleset to point to the new webkitgtk-test-fonts.
        We are using the git repository now that github has deprecated the downloads feature.

2013-01-23  Tony Chang  <tony@chromium.org>

        Unreviewed, set svn:eol-style to CRLF on Windows .sln files.

        * CLWrapper/CLWrapper.sln: Modified property svn:eol-style.
        * DumpRenderTree/DumpRenderTree.sln: Modified property svn:eol-style.
        * MIDLWrapper/MIDLWrapper.sln: Modified property svn:eol-style.
        * WebKitTestRunner/WebKitTestRunner.sln: Modified property svn:eol-style.

2013-01-23  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Update some #includes in DumpRenderTree for headers in the new Platform directory
        https://bugs.webkit.org/show_bug.cgi?id=107145

        Reviewed by Adam Barth.

        Part of a larger refactoring series; see tracking bug 82948.
        
        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp:
        * DumpRenderTree/chromium/DRTDevToolsAgent.h:
        * DumpRenderTree/chromium/DRTDevToolsClient.h:
        * DumpRenderTree/chromium/DRTTestRunner.cpp: