@@ -1,3 +1,10 @@
+2013-01-23  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Revert r139998 for now since the Leaks Viewer pulls in a specific version of Inspector code.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/LeaksViewer/WebInspectorShims.js:
+        (ProfilerAgent.getProfile):
+
 2013-01-23  Mark Pilgrim  <pilgrim@chromium.org>
 
         [Chromium] Remove unused header files in chromium/public/platform/
